--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Intialise variable total months\n",
     "total_months = 0\n",
     "\n",
     "# Calculate total months\n",
@@ -213,6 +213,7 @@
     }
    ],
    "source": [
+    "#Initialise variable net pnl\n",
     "net_pnl = 0\n",
     "\n",
     "# Calculate net_pnl by adding pnls list\n",
@@ -235,7 +236,7 @@
     }
    ],
    "source": [
-    "#initialise pnl change list\n",
+    "#Initialise variables for pnl change list\n",
     "pnl_change = []\n",
     "pnl = 0\n",
     "pnl_range_max = len(pnls)\n",
@@ -257,11 +258,12 @@
     }
    ],
    "source": [
+    "#Create pnl change list\n",
     "for pnl in range(1,pnl_range_max):\n",
     "    x = pnls[pnl] - pnls[pnl - 1]\n",
     "    pnl_change.append(int(x))\n",
     "    \n",
-    "# print(profitloss_change)\n",
+    "# print(pnl_change)\n",
     "print(pnl_change)"
    ]
   },
@@ -281,7 +283,7 @@
    ],
    "source": [
     "#calculate average pnl change\n",
-    "average_pnl_change = sum(pnl_change) / 85\n",
+    "average_pnl_change = sum(pnl_change) / 85 #divide by 85 as this is no of items in list\n",
     "print(average_pnl_change)"
    ]
   },
@@ -301,15 +303,13 @@
     }
    ],
    "source": [
-    "average_change = 0\n",
+    "#Initialise variables for min change and max change\n",
     "max_change = 0\n",
     "min_change = 0\n",
     "\n",
     "     # Calculate greatest increase\n",
     "max_change = max(pnl_change)\n",
     "print(max_change)\n",
-    "\n",
-    "# Find greatest increase date\n",
     "    \n",
     "    # Calculate greatest decrease\n",
     "min_change = min(pnl_change)\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 320,
    "id": "4f3427f8-d4bd-46fa-b002-d03c6954fc89",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "#Find max and min dates\n",
+    "#Find dates for min change and max change\n",
     "max_change_index = pnl_change.index(max_change)\n",
     "min_change_index = pnl_change.index(min_change)\n",
     "\n",
